added shadow token for excluding tokens from rule processing